# ton-teleport-btc-oracle

./: .dockerignore  .gitignore  .prettierrc  Dockerfile  README.md  bun.lockb  package.json  tsconfig.json
.github/workflows/: dev-publish.yml
frost/: Cargo.toml
frost/src/: helper.rs  key.rs  lib.rs
src/: index.ts  types.d.ts
src/base/: config.service.ts  logger.service.ts
src/contracts/: constants.ts  coordinator.contract.ts  dkgchannel.contract.ts  index.ts  pegouttx.contract.ts  teleport.contract.ts  types.ts
src/contracts/common/: convert.ts  index.ts  serialize.ts
src/dkg/: dkg.service.ts
src/keystore/: keystore.service.ts
src/keystore/strategies/: file.strategy.ts  keystore-strategy.interface.ts  strategy.enum.ts  strategy.fabric.ts
src/sign/: sign.service.ts
src/signers/: index.ts  ton-signer.ts  types.ts  validator-signer.ts
src/ton/: ton.service.ts  types.ts  validator-engine-console.service.ts  validator.service.ts
tests/: blockstream-utils.test.ts  frost.service.spec.ts  frost.service.ts  utils.ts
